# yaas

./: .editorconfig  .env-example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose-example.yml
api/: .env-example  Cargo.toml  README.md
api/src/: auth.rs  config.rs  error.rs  health.rs  main.rs  oauth.rs  run.rs  state.rs  token.rs
api/src/services/: app.rs  mod.rs  oauth_code.rs  org.rs  org_app.rs  org_member.rs  password.rs  superuser.rs  user.rs
api/src/web/: app.rs  handler.rs  json_input.rs  middleware.rs  mod.rs  oauth.rs  org.rs  org_app.rs  org_member.rs  params.rs  response.rs  routes.rs  server.rs  user.rs
db/: Cargo.toml  README.md  diesel.toml
db/migrations/: 01-enable-mvcc.sql  02-create-users.sql
db/migrations-turso/: 02-create-users.sql  03-create-passwords.sql  04-create-orgs.sql  05-create-org-members.sql  06-create-apps.sql  07-create-org-apps.sql  08-create-oauth-codes.sql  09-create-superusers.sql
db/migrations/2025-08-10-093625_create_users/: down.sql  up.sql
db/migrations/2025-08-10-095308_create_passwords/: down.sql  up.sql
db/migrations/2025-08-10-095631_create_orgs/: down.sql  up.sql
db/migrations/2025-08-10-104120_create_org_members/: down.sql  up.sql
db/migrations/2025-08-10-113318_create_apps/: down.sql  up.sql
db/migrations/2025-08-10-121415_create_org_apps/: down.sql  up.sql
db/migrations/2025-08-10-122100_create_oauth_codes/: down.sql  up.sql
db/migrations/2025-08-17-014119_create_superusers/: down.sql  up.sql
db/src/: app.rs  db.rs  error.rs  lib.rs  oauth_code.rs  org.rs  org_app.rs  org_member.rs  password.rs  schema.rs  superuser.rs  turso_decode.rs  user.rs
protogen/: .env-example  Cargo.toml  README.md  build.rs
protogen/src/: apps.rs  auth.rs  buffed.proto  config.rs  lib.rs  main.rs  oauth.rs  org_apps.rs  org_members.rs  orgs.rs  smoke.rs  smoke_test.rs  user.rs  users.rs
website/: .env-example  Cargo.toml  Dockerfile  README.md  askama.toml  biome.json
website/frontend/: .gitignore  biome.json  package-lock.json  package.json
website/frontend/scripts/: bundle-css.js  bundle-js.js  update-config.js
website/frontend/templates/elements/: pagination.html  select.html
website/frontend/templates/layout/: base.html  footer.html  nav.html
website/frontend/templates/pages/: clients.html  dir.html  error.html  index.html  login.html  my_bucket.html  new_dir.html  new_user.html  oauth_error.html  profile.html  user.html  users.html
website/frontend/templates/pages/apps/: view.html
website/frontend/templates/pages/org_apps/: index.html  view.html
website/frontend/templates/pages/org_members/: view.html
website/frontend/templates/pages/orgs/: view.html
website/frontend/templates/pages/user/: profile.html  switch_auth_context.html
website/frontend/templates/pages/users/: index.html
website/frontend/templates/widgets/: change_user_password_form.html  clients.html  confirm_delete_photo_form.html  delete_album_form.html  delete_bucket_form.html  delete_client_form.html  delete_dir_form.html  delete_user_form.html  edit_bucket_controls.html  edit_bucket_form.html  edit_client_controls.html  edit_client_form.html  edit_dir_controls.html  edit_dir_form.html  edit_photos_controls.html  edit_profile_controls.html  edit_user_controls.html  error.html  error_message.html  login_form.html  new_bucket_form.html  new_client_form.html  new_dir_form.html  new_user_form.html  photo_grid.html  photo_grid_item.html  pre_delete_photo_form.html  reset_user_password_form.html  search_dirs.html  setup_form.html  update_user_role_form.html  update_user_status_form.html  upload_result.html  users.html
website/frontend/templates/widgets/apps/: delete_form.html  edit_controls.html  regenerate_secret_form.html  search.html  update_form.html
website/frontend/templates/widgets/org_apps/: delete_form.html  edit_controls.html  new_form.html  search_app_suggestions.html  select_app_suggestion.html  select_new_owner.html
website/frontend/templates/widgets/org_members/: delete_form.html  new_form.html  search.html  search_member_suggestions.html  search_owner.html  select_member_suggestion.html
website/frontend/templates/widgets/orgs/: change_password_form.html  delete_form.html  edit_controls.html  edit_form.html  new_form.html  search.html  search_new_owner.html  (+3 more)
website/src/: config.rs  ctx.rs  error.rs  main.rs  run.rs
website/src/models/: csp.rs  login.rs  mod.rs  pagination.rs  params.rs  pref.rs  setup.rs  template.rs  view.rs
website/src/services/: apps.rs  auth.rs  buckets.rs  captcha.rs  clients.rs  dirs.rs  files.rs  mod.rs  oauth.rs  org_apps.rs  org_members.rs  orgs.rs  setup.rs  token.rs  users.rs
website/src/web/: apps.rs  buckets.rs  clients.rs  dirs.rs  error.rs  files.rs  index.rs  login.rs  middleware.rs  mod.rs  my_bucket.rs  oauth.rs  org_apps.rs  org_members.rs  orgs.rs  policies.rs  pref.rs  profile.rs  routes.rs  security_headers.rs  setup.rs  users.rs
yaas/: .env-example  Cargo.toml  Dockerfile  README.md  build.rs
yaas/frontend/bundles/: main.js
yaas/frontend/templates/layout/: base.html  nav.html
yaas/frontend/templates/pages/: bucket.html  buckets.html  index.html  new_client.html  upload_photos.html
yaas/frontend/templates/widgets/: edit_profile_controls.html  login_form.html
yaas/migrations/: 03-create-passwords.sql  05-create-org-members.sql  08-create-oauth-codes.sql
yaas/src/: actor.rs  buffed.proto  dto.rs  lib.rs  pagination.rs  role.rs  xdto.rs
yaas/src/buffed/: actor.proto  app.proto  dto.proto  error.proto  oauth.proto  oauth_code.proto  org.proto  org_app.proto  org_member.proto  pagination.proto  password.proto  role.proto  scope.proto  superuser.proto  user.proto
yaas/src/dto/: actor.rs  app.rs  error.rs  mod.rs  oauth.rs  oauth_client.rs  oauth_code.rs  org.rs  org_app.rs  org_member.rs  password.rs  superuser.rs  user.rs
yaas/src/utils/: datetime.rs  id.rs  mod.rs  slug.rs  truncate.rs
yaas/src/validators/: alphanumeric.rs  anyname.rs  csvname.rs  datetime.rs  error.rs  mod.rs  prefixed_uuid.rs  roles.rs  sluggable.rs  status.rs
(+188 files in other folders)
