[workspace]
resolver = "2"

members = ["server", "db", "password", "website", "yaas"]

[workspace.dependencies]
askama = { version = "0.14.0" }
async-trait = "0.1.88"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-test = "17.3.0"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
derive_more = { version = "2.0.1", features = ["full"] }
diesel = { version = "2.2.8", features = ["chrono", "extras", "postgres"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.14", features = ["json"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = { version = "0.8.5", features = ["backtrace"] }
text_io = "0.1.13"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
