[package]
name = "yass"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.14.0" }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
moka = { version = "0.12.10", features = ["sync"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
snafu = { version = "0.8.5" }
tokio = { version = "1.44.0", features = ["full"] }
tower-cookies = "0.11.0"
tower_governor = "0.8"
tower-http = { version = "0.6.2", features = ["fs", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
turso = "0.5.1"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.15.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
