[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-test.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
prost-types.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
text_io.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
db = { path = "../db" }
yaas = { path = "../yaas" }
password = { path = "../password" }

[dev-dependencies]
db = { path = "../db", features = ["test"]}
