[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
moka.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
db = { path = "../db" }
yaas = { path = "../yaas" }
