[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
dotenvy.workspace = true
serde.workspace = true
snafu.workspace = true
validator.workspace = true
yaas = { path = "../yaas" }
uuid.workspace = true
password = { path = "../password" }

[features]
test = []
