[package]
name = "protogen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
prost-build.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
text_io.workspace = true
tokio.workspace = true
toml.workspace = true
validator.workspace = true
db = { path = "../db" }
yaas = { path = "../yaas" }
password = { path = "../password" }

[dev-dependencies]
db = { path = "../db", features = ["test"]}
