[package]
name = "protogen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
yaas = { path = "../yaas" }
