[package]
name = "protogen"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
dotenvy.workspace = true
prost.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
yaas = { path = "../yaas" }
