[package]
name = "website"
version = "0.1.0"
edition = "2024"

[dependencies]
askama.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-test.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
moka.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
text_io.workspace = true
tokio.workspace = true
toml.workspace = true
tower.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
uuid.workspace = true
validator.workspace = true
yaas = { path = "../yaas" }
