[package]
name = "yaas"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
validator.workspace = true
uuid.workspace = true
urlencoding.workspace = true

[build-dependencies]
prost-build.workspace = true
