[package]
name = "yaas"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
prost.workspace = true
serde.workspace = true
snafu.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
validator.workspace = true

[build-dependencies]
prost-build.workspace = true
